--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -15,8 +15,8 @@ knitr::opts_chunk$set(
 ```
 
 ```{r, include=FALSE}
-library(httptest)
-httptest::start_vignette('quickstart')
+#library(httptest)
+#httptest::start_vignette('quickstart')
 ```
 
 
@@ -174,6 +174,6 @@ bpa_bioactivity
 
 
 ```{r, include=FALSE}
-httptest::end_vignette()
+#httptest::end_vignette()
 ```
 
