--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -33,7 +33,7 @@ Users who are not familiar or experienced with using APIs may not find it appeal
 
 ## API key
 
-Before getting started, a user must have an API key ready to use in order to access the CCTE APIs. This can be obtained from the admins of the CCTE APIs. In this vignette, the key will be stored as `my_key`.
+Before getting started, a user must have an API key ready to use in order to access the CCTE APIs. This can be obtained from the admins of the CCTE APIs by emailing [CCTE API Admins](mailto:ccte_api@epa.gov). In this vignette, the key will be stored as `my_key`.
 
 To run this vignette locally, execute the following code prior to knitting the vignette (in fact, prior to downloading the package). 
 
@@ -97,6 +97,12 @@ bpa_info_predicted <- get_chem_info(DTXSID = "DTXSID7020182",
 head(bpa_info_predicted)
 ```
 
+```{r, echo=FALSE, results='hide'}
+# Build pause to prevent overloading the APIs
+Sys.sleep(5)
+```
+
+
 ### Chemical Fate Resource
 
 To gather chemical fate details, we supply the same information as we did for *bpa_info* to the function `get_fate_by_dtxsid()`.
@@ -130,6 +136,12 @@ length(methane_formula)
 methane_formula[1:10]
 ```
 
+```{r, echo=FALSE, results='hide'}
+# Build pause to prevent overloading the APIs
+Sys.sleep(5)
+```
+
+
 Next, we search by mass and again display the first ten responses.
 
 ```{r, msready-mass, eval = on_cran}
@@ -158,6 +170,11 @@ print(identical(methane_dtxcid, methane_mass))
 
 Observe that the lists of chemical DTXSIDs returned from the three functions are identical. One should note that when using the function `get_msready_by_mass`, the start and end range are sensitive to very small changes, so extra attention needs to be given to the input of this function.
 
+```{r, echo=FALSE, results='hide'}
+# Build pause to prevent overloading the APIs
+Sys.sleep(5)
+```
+
 #### Batch searching and combining functions
 
 Before moving to the next set of functions, a demonstration of using more than one of the API functions may be helpful. With the previous set of functions, each returned a list of DTXSIDs. However, what these chemicals are is unclear without either memorizing vast sets of DTXSIDs or accessing information using this identifier. The latter is more tractable, so we demonstrate how to combine functions to achieve identification of the returned chemicals.
@@ -178,6 +195,10 @@ methane_formula_list <- sapply(methane_mass[1:10], function(t) {
   get_chemical_details(DTXSID = t, API_key = my_key)$molFormula
 })
 methane_formula_list
+```
+```{r, echo=FALSE, results='hide'}
+# Build pause to prevent overloading the APIs
+Sys.sleep(5)
 ```
 
 ### Chemical List Resource
@@ -221,13 +242,18 @@ bpa_lists <- get_lists_containing_chemical(DTXSID = 'DTXSID7020182',
 bpa_lists
 ```
 
+```{r, echo=FALSE, results='hide'}
+# Build pause to prevent overloading the APIs
+Sys.sleep(5)
+```
+
 ### Chemical File Resource
 
 Additional formats of chemical data are also available for interested users. These include Marvin files (.mrv), mol files (.mol), and image files.
 
 We demonstrate this below.
 
-We first grab the marving file (.mrv) for BPA.
+We first grab the marvin file (.mrv) for BPA.
 
 ```{r, bpa-mrv, eval = on_cran}
 bpa_mrv <- get_chemical_mrv(DTXSID = 'DTXSID7020182',
@@ -253,6 +279,11 @@ bpa_image_matrix <- get_chemical_image(DTXSID = 'DTXSID7020182',
 if (requireNamespace("countcolors", quietly = TRUE)){
   countcolors::plotArrayAsImage(bpa_image_matrix)
 }
+```
+
+```{r, echo=FALSE, results='hide'}
+# Build pause to prevent overloading the APIs
+Sys.sleep(5)
 ```
 
 ## Hazard APIs
@@ -285,6 +316,10 @@ bpa_eco_hazard <- get_ecotox_hazard_by_dtxsid(DTXSID = 'DTXSID7020182',
 head(bpa_eco_hazard)
 ```
 
+```{r, echo=FALSE, results='hide'}
+# Build pause to prevent overloading the APIs
+Sys.sleep(5)
+```
 
 ## Bioactivity APIs
 
