--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -165,17 +165,16 @@ Before moving to the next set of functions, a demonstration of using more than o
 Here we combine the data.tables from the `get_chemical_details()` calls for a list of ten DTXSIDs.
 
 ```{r}
-methane_df_list <- lapply(methane_mass[1:10], function(t) {
-  get_chemical_details(DTXSID = t, API_key = my_key)
-})
+methane_df_list <- get_chemical_details_batch(DTXSID = methane_mass[1:10],
+                                              API_key = my_key)
 methane_df <- data.table::rbindlist(methane_df_list)
 methane_df
 ```
 If instead we just want the information from a single column, we can specify that as follows.
 
 ```{r}
-methane_formula_list <- sapply(methane_mass[1:10], function(t) {
-  get_chemical_details(DTXSID = t, API_key = my_key)$molFormula
+methane_formula_list <- sapply(methane_df_list, function(t) {
+  t$molFormula
 })
 methane_formula_list
 ```
